tests/lustre/typechecking/shouldFail/const_01.lus
const N: int;

node top(x: int) returns (y: int);
var z: int;
let
  N = x;
tel
